--- a/app-server/package.json
+++ b/app-server/package.json
@@ -2,7 +2,6 @@
   "name": "app-server",
   "version": "1.0.0",
   "description": "",
-  // "main": "index.js",
   "private": true,
   "scripts": {
     "dev": "nodemon ./server.js"
@@ -18,6 +17,11 @@
   },
   "devDependencies": {
     "eslint": "^6.7.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.1"
   }
 }
